go-runner/src/snapshots/go_runner__integration_tests__assert_results_snapshots@zerolog_0.snap
---
source: go-runner/src/integration_tests.rs
expression: content
---
{
  "creator": {
    "name": "codspeed-go",
    "version": "0.1.0",
    "pid": "[pid]"
  },
  "instrument": {
    "type": "walltime"
  },
  "benchmarks": [
    {
      "name": "BenchmarkAppendBytes::EncodingFirst",
      "uri": "internal/json/bytes_test.go::BenchmarkAppendBytes::EncodingFirst",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendBytes::EncodingLast",
      "uri": "internal/json/bytes_test.go::BenchmarkAppendBytes::EncodingLast",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendBytes::EncodingMiddle",
      "uri": "internal/json/bytes_test.go::BenchmarkAppendBytes::EncodingMiddle",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendBytes::MultiBytesFirst",
      "uri": "internal/json/bytes_test.go::BenchmarkAppendBytes::MultiBytesFirst",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendBytes::MultiBytesLast",
      "uri": "internal/json/bytes_test.go::BenchmarkAppendBytes::MultiBytesLast",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendBytes::MultiBytesMiddle",
      "uri": "internal/json/bytes_test.go::BenchmarkAppendBytes::MultiBytesMiddle",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendBytes::NoEncoding",
      "uri": "internal/json/bytes_test.go::BenchmarkAppendBytes::NoEncoding",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendString::EncodingFirst",
      "uri": "internal/json/string_test.go::BenchmarkAppendString::EncodingFirst",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendString::EncodingLast",
      "uri": "internal/json/string_test.go::BenchmarkAppendString::EncodingLast",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendString::EncodingMiddle",
      "uri": "internal/json/string_test.go::BenchmarkAppendString::EncodingMiddle",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendString::MultiBytesFirst",
      "uri": "internal/json/string_test.go::BenchmarkAppendString::MultiBytesFirst",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendString::MultiBytesLast",
      "uri": "internal/json/string_test.go::BenchmarkAppendString::MultiBytesLast",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendString::MultiBytesMiddle",
      "uri": "internal/json/string_test.go::BenchmarkAppendString::MultiBytesMiddle",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendString::NoEncoding",
      "uri": "internal/json/string_test.go::BenchmarkAppendString::NoEncoding",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkEncoder_AppendFloat32",
      "uri": "internal/json/types_test.go::BenchmarkEncoder_AppendFloat32",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkEncoder_AppendFloat64",
      "uri": "internal/json/types_test.go::BenchmarkEncoder_AppendFloat64",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    }
  ]
}
